fixes for RowCallbackHandlers